Покрасил фигуру, которая сделала ход